fixed z-index for map interactivity

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   position: fixed;
   bottom: 100px;
   left: 150px;
-  z-index: 100;
+  z-index: 1;
   transition: all 500ms ease-in-out;
 }
 
@@ -20,7 +20,6 @@ body {
   top: 0;
   width: 100%;
   height: 100vh;
-  z-index: -5;
 }
 
 #header {
@@ -35,6 +34,7 @@ body {
   font-weight: bold;
   font-size: 1rem;
   border-bottom: 0.5px solid #333;
+  z-index: 100;
 
   & a {
     color: rgb(150, 150, 150);
@@ -93,7 +93,6 @@ body {
 
 #features {
   padding-bottom: 10vh;
-  z-index: 100;
 
   & h3 {
     font-weight: 900;
@@ -167,10 +166,14 @@ a:visited {
 .light {
   color: black;
   background-color: #ffffffdd;
+  position: relative;
+  z-index: 2;
 }
 .dark {
   color: #fafafa;
   background-color: #444;
+  position: relative;
+  z-index: 2;
 }
 .step {
   padding-bottom: 50vh;
